<package format="3">
  <name>octomap_rviz_plugins</name>
  <version>0.2.4</version>
  <description>
     A set of plugins for displaying occupancy information decoded from binary octomap messages. 
  </description>

  <maintainer email="armin@hornung.io">Armin Hornung</maintainer>
  <maintainer email="opensource@wolfgangmerkt.com">Wolfgang Merkt</maintainer>

  <url type="website">http://ros.org/wiki/octomap_rviz_plugins</url>
  <url type="bugtracker">https://github.com/OctoMap/octomap_rviz_plugins/issues</url>

  <license>BSD</license>

  <author email="jkammerl@willowgarage.com">Julius Kammerl</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-core</build_depend>
  <build_depend>libqt5-widgets</build_depend>

  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
